CMake: Replaced Ninja with Visual Studio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,12 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Add source to this project's executable.
 project (rdma CXX)
+
+# Set a custom output directory for the final executable.
+# CMake will create this directory automatically.
+# The $<CONFIG> generator expression will resolve to "Debug", "Release", etc.
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/out/bin/$<CONFIG>")
+
 add_executable (rdma "rdma.cpp")
 
 # Enable Hot Reload for MSVC compilers if supported.
@@ -22,7 +28,7 @@ if (WIN32)
     add_subdirectory("include/Win/NetworkDirect")
     add_subdirectory("include/Win/MyND2Class")
 
-    target_link_libraries(rdma PRIVATE NetworkDirect MyND2Class)
+    target_link_libraries(rdma PRIVATE NetworkDirect MyND2Class ws2_32)
 endif()
 
 # TODO: Add tests and install targets if needed.
