--- a/include/Win/NDSession/CMakeLists.txt
+++ b/include/Win/NDSession/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required(VERSION 3.12)
 
-file(GLOB MYND2CLASS_SOURCES src/*.cpp)
-file(GLOB MYND2CLASS_HEADERS include/*.hpp)
+file(GLOB NDSESSION_SOURCES src/*.cpp)
+file(GLOB NDSESSION_HEADERS include/*.hpp)
 
 # Create a library from MyNDSession
-add_library(MyND2Class STATIC ${MYND2CLASS_SOURCES})
+add_library(NDSession STATIC ${NDSESSION_SOURCES})
 
 # Set C++20 for this library
-set_property(TARGET MyND2Class PROPERTY CXX_STANDARD 20)
-set_property(TARGET MyND2Class PROPERTY CXX_STANDARD_REQUIRED ON)
+set_property(TARGET NDSession PROPERTY CXX_STANDARD 20)
+set_property(TARGET NDSession PROPERTY CXX_STANDARD_REQUIRED ON)
 
 # Public include directories - these will be propagated to targets that link to MyNDSession
-target_include_directories(MyND2Class 
+target_include_directories(NDSession 
     PUBLIC 
         ${CMAKE_CURRENT_SOURCE_DIR}/include
     PRIVATE
@@ -20,7 +20,7 @@ target_include_directories(MyND2Class
 
 # Link dependencies
 if (WIN32)
-    target_link_libraries(MyND2Class 
+    target_link_libraries(NDSession 
         PUBLIC 
             NetworkDirect  # If MyNDSession depends on NetworkDirect
         PRIVATE
@@ -29,7 +29,7 @@ if (WIN32)
 endif()
 
 # Set compile definitions if needed
-target_compile_definitions(MyND2Class PRIVATE
+target_compile_definitions(NDSession PRIVATE
     WIN32_LEAN_AND_MEAN
     NOMINMAX
 )
