--- a/examples/read_write/CMakeLists.txt
+++ b/examples/read_write/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(read_write read_write.cpp)
 
 if (WIN32)
-    target_link_libraries(read_write PRIVATE NetworkDirect MyND2Class ws2_32)
+    target_link_libraries(read_write PRIVATE NetworkDirect NDSession ws2_32)
 endif()
